cmake_minimum_required(VERSION 3.10) 
project(HelloWorld)                  
set(CMAKE_CXX_STANDARD 11)
MESSAGE(STATUS "OS is ${CMAKE_SYSTEM}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(SRC src/main.cpp)
include_directories(${PROJECT_SOURCE_DIR}/inclues)
# link_directories(${PROJECT_SOURCE_DIR}/libs)

# 判別OS系統
IF (CMAKE_SYSTEM_NAME MATCHES "Linux") 
    MESSAGE(STATUS "current platform: Linux ") 
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows") 
    MESSAGE(STATUS "current platform: Windows") 
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Darwin") 
    MESSAGE(STATUS "current platform: Mac OS X") 
ELSE () 
    MESSAGE(STATUS "other platform: ${CMAKE_SYSTEM_NAME}") 
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux") 

add_executable(${PROJECT_NAME} ${SRC}) 
find_package(fmt CONFIG REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE fmt::fmt)
find_package(unofficial-mysql-connector-cpp CONFIG REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE unofficial::mysql-connector-cpp::connector)